# contact-form

./: email.py  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: main_lukeclimenhagefunctionapp.yml
Email/: __init__.py
